--- a/www/index.html
+++ b/www/index.html
@@ -66,7 +66,7 @@
 
           <div class="col-sm-4">
             <h3>Zur Umfrage</h3>
-            <a href="#"><img src="img/ls-qrcode.png"/></a>
+            <a href="https://bit.ly/2xqnNju"><img src="img/ls-qrcode.png"/></a>
           </div>
         </div>
         <div class="row">
